--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: openrndr/setup-opengl@v1.1
+    - run: xvfb-run glxinfo
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
