--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: openrndr/setup-opengl@v1.1
     - run: xvfb-run glxinfo
+    - run: sudo apt-get install mesa-utils freeglut3-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
