--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,8 +18,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: openrndr/setup-opengl@v1.1
     - run: xvfb-run glxinfo
-    - run: sudo apt-get install mesa-utils freeglut3-dev
-
+    - run: sudo apt-get install -y mesa-utils freeglut3-dev
+    - run: sudo apt-get install -y libxrandr-dev
+    - run: sudo apt-get install -y doxygen
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
