--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: openrndr/setup-opengl@v1.1
     - run: xvfb-run glxinfo
     - run: sudo apt-get install -y mesa-utils freeglut3-dev
-    - run: sudo apt-get install -y libxrandr-dev
+    - run: sudo apt-get install -y libxrandr-dev libx11-dev
     - run: sudo apt-get install -y doxygen
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
