--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ set(ENGINE_SOURCES # All source files in the ENGINE project
   "${CMAKE_CURRENT_SOURCE_DIR}/src/engine/shader.cc"
   "${CMAKE_CURRENT_SOURCE_DIR}/src/engine/graphics.cc"
   "${CMAKE_CURRENT_SOURCE_DIR}/src/engine/window.cc"
+  "${CMAKE_CURRENT_SOURCE_DIR}/src/engine/thread.cc"
   "${CMAKE_CURRENT_SOURCE_DIR}/src/engine/internal.cc"
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/glad/src/glad.c")
 set(ENGINE_HEADERS # All header files in the ENGINE project
@@ -112,6 +113,7 @@ set(ENGINE_HEADERS # All header files in the ENGINE project
   "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/shader.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/graphics.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/window.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/thread.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/listener.hpp")
 set(ENGINE_INCLUDE # All include files in the ENGINE project
   "${CMAKE_CURRENT_SOURCE_DIR}/include"
@@ -121,6 +123,7 @@ set(ENGINE_INCLUDE # All include files in the ENGINE project
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/fmt/include"
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/spdlog/include"
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/FreeImage/Source"
+  "${CMAKE_CURRENT_SOURCE_DIR}/ext/cptl"
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/include")
 
 # Prefer libc++ in conjunction with Clang, not on Windows
