Added temporary agent generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,11 @@ add_subdirectory("ext/glfw")
 add_subdirectory("ext/spdlog")
 
 
-target_link_libraries(engine PUBLIC spdlog PRIVATE glfw PRIVATE fmt::fmt PRIVATE ${CMAKE_DL_LIBS})
+target_link_libraries(engine
+  PUBLIC spdlog
+  PRIVATE glfw
+  PUBLIC fmt::fmt
+  PRIVATE ${CMAKE_DL_LIBS})
 target_include_directories(engine
   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ext/glad"
